<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Joint" Id="{ba4bf0d8-7ccb-42b6-ac15-60a638e315a7}">
    <Declaration><![CDATA[TYPE Joint :
STRUCT
	curPosition : LREAL;
	curSpeed : LREAL;
	setSpeed : LREAL;
	timer : TIMER;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>